--- a/src/components/Styles/Login.css
+++ b/src/components/Styles/Login.css
@@ -1,10 +1,9 @@
 
-@import url('https://fonts.googleapis.com/css?family=Inria+Serif&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Barlow&display=swap');
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Inria Serif', serif;
+    font-family: 'Barlow', sans-serif;
     
 
 }
@@ -15,9 +14,8 @@
     text-align: center;
     justify-content: center;
     width: 100%;
-    max-width: 1200px;
-    flex-direction: column;
-    background-color: brown;
+    
+    
 }
 
 .login{
@@ -27,13 +25,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: black;
+   
 }
 
 .logo{
-   background-color: burlywood;
-    width: 220px;
-    height: 220px;
+   
+    width: 10%;
+    height: 10%;
     overflow: hidden;
 }
 
@@ -44,9 +42,9 @@
     align-items: center;
     text-align: left;
     flex-direction: column;
-    width: 40%;
+    width: 100%;
     height: 5%;
-    background-color: aqua;
+    
 }
 
 
@@ -54,14 +52,37 @@
 
     justify-content: center;
     align-items: center;
-    margin-top: 15%;
+    margin-top: 5%;
     width: 50%;
     height: 2.1em;
     border-radius: 8px;
     font-weight: 700;
-    font-size: 1em;
-    
+    font-size: 1.2em;
+    background-color: rgb(51, 50, 50);
+    color: white;
+}
 
+.formu .texto:nth-last-child(2){
+    font-size: 1.2em;
+}
 
+.formu input{
+    width: 30%;
+    height: 2.3em;
+    margin-top: 1em;
+    border-radius: 5px;
+    background-color: rgb(51, 50, 50);
+    font-size: 1.2;
+    color: white;
+}
+
+.btnRegistrar{
+    width: 30%;
+    height: 2.3em;
+    margin-top: 1em;
+    border-radius: 5px;
+    background-color: rgb(51, 50, 50);
+    font-size: 1.2;
+    color: white;
 }
 
