--- a/src/components/Styles/Login.css
+++ b/src/components/Styles/Login.css
@@ -9,11 +9,14 @@
 }
 
 .content{
+    
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: center;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
     
     
 }
@@ -30,8 +33,9 @@
 
 .logo{
    
-    width: 10%;
-    height: 10%;
+    width: 120px;
+    height: 120px;
+    margin-bottom: 1em;
     overflow: hidden;
 }
 
@@ -43,6 +47,7 @@
     text-align: left;
     flex-direction: column;
     width: 100%;
+    margin-bottom: 5%;
     height: 5%;
     
 }
@@ -55,34 +60,69 @@
     margin-top: 5%;
     width: 50%;
     height: 2.1em;
-    border-radius: 8px;
+    border-radius: 5px;
     font-weight: 700;
     font-size: 1.2em;
-    background-color: rgb(51, 50, 50);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid #3498db;
+    color: black;
 }
 
 .formu .texto:nth-last-child(2){
     font-size: 1.2em;
 }
 
-.formu input{
-    width: 30%;
-    height: 2.3em;
-    margin-top: 1em;
-    border-radius: 5px;
-    background-color: rgb(51, 50, 50);
-    font-size: 1.2;
-    color: white;
+.contbtn{
+    text-align: center;
+
 }
 
-.btnRegistrar{
-    width: 30%;
-    height: 2.3em;
-    margin-top: 1em;
-    border-radius: 5px;
-    background-color: rgb(51, 50, 50);
-    font-size: 1.2;
-    color: white;
+.btn{
+    border: 1px solid #3498db;
+    background: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+    color: #3498db;
+   
+}
+
+
+
+
+
+.btn:hover{
+    color: #000;
+}
+
+
+.btn::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background: #3498db;
+    z-index: -1;
+    transition: 0.2s;
+}
+
+
+.btn::before{
+    top: 0;
+  border-radius: 0 0 50% 50%;
+}
+
+.btn:hover::before{
+    height: 180%;
+}
+
+.btn:active{
+    height: 0%;
+    transition: 0.2s;
 }
 
