--- a/src/components/Styles/Login.css
+++ b/src/components/Styles/Login.css
@@ -8,6 +8,15 @@
 
 }
 
+body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .content{
     
     display: flex;
@@ -22,7 +31,7 @@
 }
 
 .login{
-    width: 90%;
+    width: 100%;
     height: 70%;
     display: flex;
     justify-content: center;
@@ -33,12 +42,20 @@
 
 .logo{
    
-    width: 120px;
-    height: 120px;
+    width: 20%;
+    height: 20%;
     margin-bottom: 1em;
     overflow: hidden;
+    min-width: 100px;
+    min-height: 100px;
+    
 }
 
+.login h3
+{
+ 
+    margin-bottom: 120px;
+}
 
 .formu{
     display: flex;
@@ -62,14 +79,19 @@
     height: 2.1em;
     border-radius: 5px;
     font-weight: 700;
-    font-size: 1.2em;
+    font-size: 1.5em;
+    margin-top: 15px;
     background-color: rgb(255, 255, 255);
     border: 2px solid #3498db;
     color: black;
 }
 
 .formu .texto:nth-last-child(2){
-    font-size: 1.2em;
+    font-size: 1.5em;
+}
+
+.formu .btn{
+    margin-bottom: 100px;
 }
 
 .contbtn{
@@ -126,3 +148,145 @@
     transition: 0.2s;
 }
 
+
+
+@media screen and (max-height: 390px){
+
+
+
+    
+.logo{
+   
+    width: 20%;
+    height: 20%;
+    margin-bottom: 1em;
+    overflow: hidden;
+  
+    
+}
+
+.login h3
+{
+ 
+    margin-bottom: 25%;
+}
+
+.formu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    flex-direction: column;
+    width: 100%;
+    height: 5%;
+    margin-bottom: 5%;
+    
+}
+
+
+.formu .texto{
+
+    justify-content: center;
+    align-items: center;
+    margin-top: 5%;
+    width: 50%;
+    height: 2.1em;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 1.5em;
+    margin-top: 15px;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid #3498db;
+    color: black;
+}
+
+.formu .texto:nth-last-child(2){
+    font-size: 1.5em;
+}
+
+.formu .btn{
+    margin-bottom: 100px;
+}
+
+.contbtn{
+    text-align: center;
+
+}
+
+.btn{
+    border: 1px solid #3498db;
+    background: none;
+    padding: 10px 20px;
+    font-size: 100%;
+    cursor: pointer;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+    color: #3498db;
+   
+}
+
+
+
+
+
+.btn:hover{
+    color: #000;
+}
+
+
+.btn::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background: #3498db;
+    z-index: -1;
+    transition: 0.2s;
+}
+
+
+.btn::before{
+    top: 0;
+  border-radius: 0 0 50% 50%;
+}
+
+.btn:hover::before{
+    height: 180%;
+}
+
+.btn:active{
+    height: 0%;
+    transition: 0.2s;
+}
+
+
+}
+
+
+@media screen and (max-height: 356px){
+    .logo{
+        visibility: hidden;
+    }
+    .login h1{
+        margin-top: -4em;
+        font-size: 100%;
+        position: fixed;
+    }
+
+  
+
+}
+
+@media screen and (max-height: 356px) and (max-width:410px){
+    .login h3{
+        visibility: hidden;
+
+    }
+
+    .login h1{
+        margin-top: -6em;
+    }
+}
