--- a/src/components/Styles/Login.css
+++ b/src/components/Styles/Login.css
@@ -8,14 +8,6 @@
 
 }
 
-body{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
 
 .content{
     
@@ -23,15 +15,18 @@ body{
     align-items: center;
     text-align: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    max-width: 1300px;
+    max-height:1100px;
+    min-width: 320px;
+    min-height: 326px;
     overflow: hidden;
     
     
 }
 
 .login{
-    width: 100%;
+    max-width: 1200px;
+    min-width: 320px;
     height: 70%;
     display: flex;
     justify-content: center;
@@ -51,31 +46,35 @@ body{
     
 }
 
+.content .login h1{
+    font-family: 100%;
+    position: relative;
+}
+
 .login h3
 {
  
-    margin-bottom: 120px;
+    margin-bottom: 10px;
 }
 
-.formu{
+.formL{
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: left;
     flex-direction: column;
     width: 100%;
-    margin-bottom: 5%;
-    height: 5%;
+    margin-bottom: 3%;
     
 }
 
 
-.formu .texto{
+.formL .textoL{
 
     justify-content: center;
     align-items: center;
     margin-top: 5%;
-    width: 50%;
+    width: 80%;
     height: 2.1em;
     border-radius: 5px;
     font-weight: 700;
@@ -86,26 +85,53 @@ body{
     color: black;
 }
 
-.formu .texto:nth-last-child(2){
+.formL .textoL:nth-last-child(2){
     font-size: 1.5em;
 }
 
-.formu .btn{
-    margin-bottom: 100px;
-}
 
-.contbtn{
+.contbtnL{
+    text-align: center;
+    margin-bottom: 0;
+    bottom: 0;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 
+    width: 100%;
+    height: 50px;
+
 }
 
-.btn{
+.formL .contbtn{
+    text-align: center;
+    margin-bottom: 0;
+    bottom: 0;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 156px;
+    height: 100px;
+}
+
+.regiCont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+}
+
+.btnL{
     border: 1px solid #3498db;
     background: none;
     padding: 10px 20px;
     font-size: 20px;
     cursor: pointer;
-    margin: 10px;
     transition: 0.8s;
     position: relative;
     overflow: hidden;
@@ -117,12 +143,12 @@ body{
 
 
 
-.btn:hover{
+.btnL:hover{
     color: #000;
 }
 
 
-.btn::before{
+.btnL::before{
     content: "";
     position: absolute;
     left: 0;
@@ -134,62 +160,87 @@ body{
 }
 
 
-.btn::before{
+.btnL::before{
     top: 0;
   border-radius: 0 0 50% 50%;
 }
 
-.btn:hover::before{
+.btnL:hover::before{
     height: 180%;
 }
 
-.btn:active{
+.btnL:active{
     height: 0%;
     transition: 0.2s;
 }
 
 
 
-@media screen and (max-height: 390px){
-
-
+@media screen and(min-height: 435px){
 
     
+.content{
+    
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    max-width: 1300px;
+    max-height:1100px;
+    min-width: 320px;
+    min-height: 320px;
+    overflow: hidden;
+    
+    
+}
+
+.login{
+    max-width: 1200px;
+    min-width: 320px;
+    min-width: 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+   
+}
+
 .logo{
    
     width: 20%;
     height: 20%;
     margin-bottom: 1em;
     overflow: hidden;
-  
+    min-width: 100px;
+    min-height: 100px;
     
 }
 
 .login h3
 {
  
-    margin-bottom: 25%;
+    margin-bottom: 10px;
 }
 
-.formu{
+.formL{
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: left;
     flex-direction: column;
     width: 100%;
-    height: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
     
 }
 
 
-.formu .texto{
+.formL .textoL{
 
     justify-content: center;
     align-items: center;
     margin-top: 5%;
-    width: 50%;
+    width: 80%;
     height: 2.1em;
     border-radius: 5px;
     font-weight: 700;
@@ -200,93 +251,57 @@ body{
     color: black;
 }
 
-.formu .texto:nth-last-child(2){
+.formL .textoL:nth-last-child(2){
     font-size: 1.5em;
 }
 
-.formu .btn{
-    margin-bottom: 100px;
-}
 
-.contbtn{
+.contbtnL{
     text-align: center;
+    margin-bottom: 0;
+    bottom: 0;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+    height: 60px;
+    
 
 }
 
-.btn{
+.formL .contbtnL{
+    text-align: center;
+    margin-bottom: 0;
+    bottom: 0;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 156px;
+    height: 100px;
+}
+
+.regiContL{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+}
+
+.btnL{
     border: 1px solid #3498db;
     background: none;
     padding: 10px 20px;
-    font-size: 100%;
+    font-size: 20px;
     cursor: pointer;
-    margin: 10px;
     transition: 0.8s;
     position: relative;
     overflow: hidden;
     color: #3498db;
    
 }
-
-
-
-
-
-.btn:hover{
-    color: #000;
-}
-
-
-.btn::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 0%;
-    background: #3498db;
-    z-index: -1;
-    transition: 0.2s;
-}
-
-
-.btn::before{
-    top: 0;
-  border-radius: 0 0 50% 50%;
-}
-
-.btn:hover::before{
-    height: 180%;
-}
-
-.btn:active{
-    height: 0%;
-    transition: 0.2s;
-}
-
-
-}
-
-
-@media screen and (max-height: 356px){
-    .logo{
-        visibility: hidden;
-    }
-    .login h1{
-        margin-top: -4em;
-        font-size: 100%;
-        position: fixed;
-    }
-
-  
-
-}
-
-@media screen and (max-height: 356px) and (max-width:410px){
-    .login h3{
-        visibility: hidden;
-
-    }
-
-    .login h1{
-        margin-top: -6em;
-    }
 }
