--- a/src/components/Styles/Register.css
+++ b/src/components/Styles/Register.css
@@ -8,14 +8,7 @@
 
 }
 
-body{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
+
 
 .content{
     
@@ -23,20 +16,27 @@ body{
     align-items: center;
     text-align: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    max-width: 1300px;
+    min-width: 320px;
+    max-height: 1100px;
+    min-height: 326px;
     overflow: hidden;
     
     
 }
 
+.Registro{
+    width: 100%;
+    height: 100;
+}
 .elements{
     width: 100%;
     height: 70%;
     display: flex;
     justify-content: center;
+    text-align: center;
     align-items: center;
-    flex-direction: column;
+     flex-direction: column;
    
 }
 
@@ -57,14 +57,13 @@ body{
     margin-bottom: 5%;
 }
 
-.formu{
+.form{
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: left;
+    text-align: center;
     flex-direction: column;
     width: 100%;
-    margin-bottom: 5%;
     height: 5%;
     
 }
@@ -75,7 +74,7 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 5%;
-    width: 50%;
+    width: 30%;
     height: 2.1em;
     border-radius: 5px;
     font-weight: 700;
@@ -90,12 +89,15 @@ body{
     font-size: 1.5em;
 }
 
-.formu .btn{
-    margin-bottom: 100px;
-}
 
-.contbtn{
-    text-align: center;
+
+.contBtnR{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+    margin-top: 5%;
+
 
 }
 
@@ -105,7 +107,6 @@ body{
     padding: 10px 20px;
     font-size: 20px;
     cursor: pointer;
-    margin: 10px;
     transition: 0.8s;
     position: relative;
     overflow: hidden;
@@ -195,7 +196,7 @@ body{
 }
 
 .formu .btn{
-    margin-bottom: 100px;
+    margin-bottom: 0;
 }
 
 .contbtn{
@@ -209,7 +210,7 @@ body{
     padding: 10px 20px;
     font-size: 100%;
     cursor: pointer;
-    margin: 10px;
+    margin: 0;
     transition: 0.8s;
     position: relative;
     overflow: hidden;
