--- a/src/components/Styles/Register.css
+++ b/src/components/Styles/Register.css
@@ -10,7 +10,7 @@
 
 
 
-.content{
+.Container{
     
     display: flex;
     align-items: center;
@@ -18,38 +18,37 @@
     justify-content: center;
     max-width: 1300px;
     min-width: 320px;
-    max-height: 1100px;
+    max-height: 100vh;
     min-height: 326px;
     overflow: hidden;
     
     
 }
 
+
 .Registro{
-    width: 100%;
-    height: 100;
-}
-.elements{
-    width: 100%;
-    height: 70%;
+    max-width: 1200px;
+    min-width: 320px;
+    min-width: 320px;
     display: flex;
     justify-content: center;
-    text-align: center;
     align-items: center;
-     flex-direction: column;
-   
-}
-
-.logo{
-   
-    width: 20%;
-    height: 20%;
-    margin-bottom: 1em;
-    overflow: hidden;
-    min-width: 100px;
-    min-height: 100px;
+    flex-direction: column;
     
 }
+
+   
+    .logo{
+   
+        width: 20%;
+        height: 20%;
+        margin-bottom: 1em;
+        overflow: hidden;
+        min-width: 100px;
+        min-height: 100px;
+        
+    }
+
 
 .elements h2
 {
